--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Max Reeves
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: I like food
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: http://static2.uk.businessinsider.com/image/590b2238dd08953a718b4831-1200/9-pizza-hut.jpg
 #
 # Flags below are optional
 #
